Fix coverflow

--- a/app/_scss/_coverflow.scss
+++ b/app/_scss/_coverflow.scss
@@ -67,7 +67,7 @@ img#cf-3:hover {
     z-index: 3;
 }
 
-img#cf-3 {
+img#cf-2 {
     width: 300px;
     height: 300px;
     z-index: 2;
@@ -124,7 +124,7 @@ img#cf-3 {
     -webkit-transform:rotate(-15deg);
  */
     }
-    img#cf-3 {
+    img#cf-2 {
         width: 500px;
         height: 500px;
         z-index: 2;
@@ -184,7 +184,7 @@ img#cf-3 {
     -webkit-transform:rotate(-15deg);
  */
     }
-    img#cf-3 {
+    img#cf-2 {
         width: 150px;
         height: 150px;
         z-index: 2;
